               ‘ylab’, ‘xlab’ and ‘main’,

             • Fix an issue that causes an error when input values were
               <= 0 (#123 reported by Johanna Lomax),

             • Correct wrong y-axis labelling (wrong channel resolution
               value).

         • ‘analyse_IRSAR.RF()’:

             • Add ‘...’ support for ‘mtext’

         • ‘plot_Histogram()’:

             • Change default y-axis labelling from 'Counts' to
               'Frequency'

         • ‘plot_AbanicoPlot()’:

             • numeric values allowed for parameter centrality,

             • KDE label value fixed,

             • layout functionality added,

             • not supported summary keywords fixed.

         • ‘analyse_SAR.CWOSL()’:

             • Clarify behaviour when no OSL curve is provided;
               function now stops with an error (#132, reported by
               Alice Versendaal)

         • ‘plot_RLum.Data.Curve()’:

             • Add argument ‘norm’ to allow for curve normalisation to
               the highest value (#129)

         • ‘calc_MaxDose3()’ & ‘calc_MaxDose4()’:

             • bootstrap method (recycled) as described in Cunningham &
               Wallinga (2012) implemented,

             • upper and lower plot margins of profile log likelihood
               plots decreased,

             • function now iteratively adjusts boundaries for gamma,
               sigma and p0 when one of the estimators reaches the
               lower or upper boundary,

             • new arguments: ‘boundary.sigma’, ‘boundary.gamma’,
               ‘init.values’, ‘...’ (‘bs.M’, ‘bs.N’, ‘bs.h’,
               ‘sigmab.sd’),

             • removed/merged arguments: ‘sigma.xlb’, ‘sigma.xub’,
               ‘gamma.xlb’, ‘gamma.xub’, ‘init.gamma’, ‘init.sigma’,
               ‘init.p0’, ‘output.indices’

  Internals:

         • Add new dependency for package ‘raster’, which is used for
           the ‘RLum.Data.Image-class’
