@@ -135,6 +135,11 @@ Changes in version 0.4.0 (XX XXXX, 2014):
                ‘gamma.xlb’, ‘gamma.xub’, ‘init.gamma’, ‘init.sigma’,
                ‘init.p0’, ‘output.indices’
 
+         • ‘readBIN2R()’:
+
+             • Integrity checks added to avoid unspecific errors for
+               wrong input formats.
+
   Internals:
 
          • Add new dependency for package ‘raster’, which is used for
